@@ -8,9 +8,9 @@ DESIGN ISSUES
 - spacing change between charge pairs is very small with battery, because battery range is so small compared to sim max
 
 HIGH PRIORITY
+- clean up layout and sizing of E-field detector
 - fix initial location of vector labels and values
 - chose a more appropriate max for detector vectors
-- center labels and values above/below tails of detector vectors, labels above values
 - add zoom button to E-field detector (necessary after choosing a better max?)
 - decide whether to use Property<T> for EFieldDetector
 - add geometry of wires to model
