@@ -1,3 +1,4 @@
+10/24/10 center labels and values above/below tails of detector vectors, labels above values
 10/24/10 decided E-field in battery will be zero, because field detector shows capacitor-specific field vectors (Noah P)
 10/24/10 remove dielectric gap from model, per Noah P.
 10/24/10 show absolute values in field detector, with no comma in numbers
